--- a/myapp/webapp/src/main/webapp/angular/app/index.html
+++ b/myapp/webapp/src/main/webapp/angular/app/index.html
@@ -4,21 +4,21 @@
     <title>R.I.T.A.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-    <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="angular/bower_components/html5-boilerplate/dist/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="angular/bower_components/html5-boilerplate/dist/css/main.css">
+    <link rel="stylesheet" type="text/css" href="angular/app/app.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-resource.min.js"></script>
 
-    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="angular/bower_components/angular-route/angular-route.js"></script>
 
-    <script src="js/app.js"></script>
+    <script src="angular/app/js/app.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="angular/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body ng-app="demo">
 <div class="container">
@@ -35,7 +35,7 @@
 
             <div class="tab-content">
                 <div id="home" class="tab-pane fade in active">
-                    <a href="/wicket/" class="btn btn-primary btn-block" role="button">Go to administration</a>
+                    <a href="admin" class="btn btn-primary btn-block" role="button">Go to administration</a>
                 </div>
 
                 <div id="addride" class="tab-pane fade" ng-controller="AddRideCtrl">
